# crypto-pipeline

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  relatorio_tecnico.md  run_all.py
airflow/dags/: crypto_pipeline_dag.py
infra/docker/airflow/: Dockerfile
infra/docker/spark/: Dockerfile
infra/terraform/: main.tf  provider.tf  variables.tf
src/dashboard/: app.py
src/ingestao/: coingecko_producer.py
src/processamento/gold/: metricas_gold.py
src/processamento/maintenance/: compaction.py  vacuum.py
src/processamento/silver/: mercado_silver.py
src/streaming/: spark_bronze.py
