[tool.poetry]
name = "crypto-pipeline"
version = "0.1.0"
description = "Pipeline de Dados Massivos para Criptoativos  CoinGecko → Spark → Iceberg → MinIO"
authors = [
    "Pedro Henrique Rodrigues da Silva",
    "Pedro Henrique Azevedo de Medeiros",
    "Marco Túlio Sousa",
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.3"
requests = "^2.31"
python-dotenv = "^1.0"
boto3 = "^1.34"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
